MudColorPicker, removed drag events fixed overflow issue

--- a/src/MudBlazor/Styles/components/_pickercolor.scss
+++ b/src/MudBlazor/Styles/components/_pickercolor.scss
@@ -9,6 +9,8 @@
 .mud-picker-color-picker {
     width: 300px;
     height: 250px;
+    position: relative;
+    overflow: hidden;
 
     .mud-picker-color-overlay {
         width: 100%;
